<!-- ScrollView containing LinearLayout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelevantCourseSubjectsActivity"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <!-- LinearLayout for vertical arrangement -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TextView for Relevant Course Subjects -->
        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relevant_course_subjects"
            android:textStyle="bold"
            android:textSize="32sp"
            android:gravity="center"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"/>

        <!-- TextView for Python -->
        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/python"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/python_is_a_versatile_and_user_friendly_programming_language_known_for_its_simplicity_and_readability_favored_by_beginners_and_professionals_alike_for_its_extensive_libraries_and_wide_range_of_applications_from_web_development_and_data_analysis_to_artificial_intelligence_and_automation"
            android:textSize="15sp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="25dp"/>

        <!-- TextView for Object Oriented Programming using Java -->
        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_oriented_programming_using_java"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/java_is_a_widely_used_high_level_object_oriented_programming_language_known_for_its_platform_independence_thanks_to_its_write_once_run_anywhere_philosophy_it_features_strong_type_checking_automatic_memory_management_and_a_rich_ecosystem_of_libraries_and_frameworks_making_it_popular_for_building_enterprise_level_applications_web_services_and_mobile_apps"
            android:textSize="15sp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="25dp"/>

        <!-- TextView for Data Structures and Algorithms -->
        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_structures_and_algorithms"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_structures_and_algorithms_are_fundamental_concepts_in_computer_science_focusing_on_the_organization_and_manipulation_of_data_as_well_as_efficient_problem_solving_techniques_they_form_the_backbone_of_software_engineering_and_are_crucial_for_building_efficient_and_scalable_applications_understanding_data_structures_enables_developers_to_store_retrieve_and_manipulate_data_effectively_while_knowledge_of_algorithms_allows_for_the_creation_of_efficient_solutions_to_computational_problems_these_concepts_are_essential_for_software_development_ranging_from_simple_tasks_like_sorting_and_searching_to_more_complex_problems_such_as_graph_traversal_and_dynamic_programming"
            android:textSize="15sp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="25dp"/>

        <!-- TextView for Relational Database Management System (RDBMS) -->
        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relational_database_management_system_rdbms"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_relational_database_management_system_rdbms_is_a_software_system_that_enables_users_to_create_manage_and_manipulate_relational_databases_it_is_based_on_the_relational_model_of_data_where_data_is_organized_into_tables_with_rows_and_columns_and_relationships_between_tables_are_established_using_keys_rdbmss_provide_a_structured_and_efficient_way_to_store_and_retrieve_data_ensuring_data_integrity_consistency_and_security_they_support_sql_structured_query_language_for_querying_and_manipulating_data_making_them_widely_used_in_various_applications_including_web_development_enterprise_systems_and_data_analytics_common_examples_of_rdbmss_include_mysql_postgresql_oracle_database_and_microsoft_sql_server"
            android:textSize="15sp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="25dp"/>

    </LinearLayout>
</ScrollView>
